Uploaded image for project: 'Subversion'
  1. Subversion
  2. SVN-3404

svnsync fails when source has ^M in svn:* properties (eol-style)

    XMLWordPrintableJSON

Details

    • Bug
    • Status: Closed
    • Major
    • Resolution: Fixed
    • 1.6.x
    • ---
    • svnsync
    • None

    Description

      Subversion 1.6 no longer accepts carriage returns (^M) in the values of its own properties (i.e. svn:log, 
      svn:ignore and others). Prior to 1.6 such properties were accepted.
      
      svnsync 1.6 fails when the source repository violates eol-purity on any of the relevant properties.
      
      A great many such repositories exist in the wild because Subclipse was -- until very recently -- sloppy 
      with line endings when running on Windows.
      
      This defect is only about fixing svnsync's newfound inability to sync foreign repositories with this 
      particular problem. 
      
      The linked thread(s) also present a solution for filtering the error out of a dump file, allowing an admin 
      to fix their own repositories. Also mentioned is that a fix has been implemented in Subclipse since this 
      issue was raised on the lists.
      

      http://subversion.tigris.org/ds/viewMessage.do?dsMessageId=1493120&dsForumId=462

      Original issue reported by bpsm

      Attachments

        Issue Links

          Activity

            People

              Unassigned Unassigned
              subversion-importer Subversion Importer
              Votes:
              0 Vote for this issue
              Watchers:
              1 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved: