subversion/svnrdump/svnrdump.h
@@ -106,23 +106,6 @@ svn_rdump__normalize_props(apr_hash_t **normal_props,
                            apr_hash_t *props,
                            apr_pool_t *result_pool);
 
-/* Normalize the line ending style of a single property that "needs
- * translation" (according to svn_prop_needs_translation(),
- * currently all svn:* props) so that they contain only LF (\n) line endings.
- * "\r" characters found mid-line are replaced with "\n".
- * "\r\n" sequences are replaced with "\n"
- *
- * NAME is used to check that VALUE should be normalized, and if this is the
- * case, *RESULT_P is then set to the normalized property value.  If no
- * normalization is required, VALUE will be copied to RESULT_POOL
- * unchanged.
- */
-svn_error_t *
-svn_rdump__normalize_prop(const svn_string_t **result_p,
-                          const char *name,
-                          const svn_string_t *value,
-                          apr_pool_t *result_pool);
-
 #ifdef __cplusplus
 }
 #endif /* __cplusplus */
